--- a/docs/src/_data/api/entities/locatable_entity.yml
+++ b/docs/src/_data/api/entities/locatable_entity.yml
@@ -1,179 +1,179 @@
 ---
 name: LocatableEntity
 path: Lookbook::LocatableEntity
-description: ""
+description: ''
 methods:
-  - id: file-path-instance-method
-    name: file_path
-    path: Lookbook::LocatableEntity#file_path
-    signature: file_path
-    signature_call: file_path
-    signature_args: ""
-    description: Full path to the entity file
-    return_types: Pathname
-    scope: instance
-    tags:
-      - name:
-        tag_name: api
-        text: public
-        types:
-      - name:
-        tag_name: return
-        text: File patj
-        types: Pathname
-    klass: LocatableEntity
-    group: Paths
-    aliases:
-      - full_path
-  - id: file-name-instance-method
-    name: file_name
-    path: Lookbook::LocatableEntity#file_name
-    signature: file_name(strip_ext = false)
-    signature_call: file_name
-    signature_args: strip_ext = false
-    description: |-
-      Name of the entity file.
-
-      Includes file extension unless the `strip_ext` argument is `true`.
-    return_types: String
-    scope: instance
-    tags:
-      - name:
-        tag_name: api
-        text: public
-        types:
-      - name: strip_ext
-        tag_name: param
-        text: Whether or not to remove the file extension
-        types: Boolean
-      - name:
-        tag_name: return
-        text: File name
-        types: String
-    klass: LocatableEntity
-    group: Paths
-    aliases: []
-  - id: file-extension-instance-method
-    name: file_extension
-    path: Lookbook::LocatableEntity#file_extension
-    signature: file_extension
-    signature_call: file_extension
-    signature_args: ""
-    description: Extension of the entity file.
-    return_types: String
-    scope: instance
-    tags:
-      - name:
-        tag_name: api
-        text: public
-        types:
-      - name:
-        tag_name: return
-        text: File extension
-        types: String
-    klass: LocatableEntity
-    group: Paths
-    aliases: []
-  - id: directory-path-instance-method
-    name: directory_path
-    path: Lookbook::LocatableEntity#directory_path
-    signature: directory_path
-    signature_call: directory_path
-    signature_args: ""
-    description: Full directory path for the entity file.
-    return_types: Pathname
-    scope: instance
-    tags:
-      - name:
-        tag_name: api
-        text: public
-        types:
-      - name:
-        tag_name: return
-        text: Directory path
-        types: Pathname
-    klass: LocatableEntity
-    group: Paths
-    aliases:
-      - dir_path
-  - id: relative-file-path-instance-method
-    name: relative_file_path
-    path: Lookbook::LocatableEntity#relative_file_path
-    signature: relative_file_path
-    signature_call: relative_file_path
-    signature_args: ""
-    description: |-
-      Relative path to the entity file.
-
-      Returned path is relative to the appropriate base directory
-      (i.e. the preview directory for previews).
-    return_types: Pathname
-    scope: instance
-    tags:
-      - name:
-        tag_name: api
-        text: public
-        types:
-      - name:
-        tag_name: return
-        text: Relative file path
-        types: Pathname
-    klass: LocatableEntity
-    group: Paths
-    aliases:
-      - rel_path
-  - id: relative-directory-path-instance-method
-    name: relative_directory_path
-    path: Lookbook::LocatableEntity#relative_directory_path
-    signature: relative_directory_path
-    signature_call: relative_directory_path
-    signature_args: ""
-    description: |-
-      Relative directory path for the entity file.
-
-      Returned path is relative to the appropriate base directory
-      (i.e. the preview directory for previews).
-    return_types: Pathname
-    scope: instance
-    tags:
-      - name:
-        tag_name: api
-        text: public
-        types:
-      - name:
-        tag_name: return
-        text: Relative directory path
-        types: Pathname
-    klass: LocatableEntity
-    group: Paths
-    aliases: []
-  - id: last-modified-instance-method
-    name: last_modified
-    path: Lookbook::LocatableEntity#last_modified
-    signature: last_modified
-    signature_call: last_modified
-    signature_args: ""
-    description: Time that the entity file was last modified
-    return_types: Time
-    scope: instance
-    tags:
-      - name:
-        tag_name: api
-        text: public
-        types:
-      - name:
-        tag_name: return
-        text: Time last modified
-        types: Time
-    klass: LocatableEntity
-    group: Paths
-    aliases: []
-groups:
-  - Paths
-type: module
-category: entity
-tags:
+- id: file-path-instance-method
+  name: file_path
+  path: Lookbook::LocatableEntity#file_path
+  signature: file_path
+  signature_call: file_path
+  signature_args: ''
+  description: Full path to the entity file
+  return_types: Pathname
+  scope: instance
+  tags:
   - name:
     tag_name: api
     text: public
     types:
+  - name:
+    tag_name: return
+    text: File patj
+    types: Pathname
+  klass: LocatableEntity
+  group: Paths
+  aliases:
+  - full_path
+- id: file-name-instance-method
+  name: file_name
+  path: Lookbook::LocatableEntity#file_name
+  signature: file_name(strip_ext = false)
+  signature_call: file_name
+  signature_args: strip_ext = false
+  description: |-
+    Name of the entity file.
+
+    Includes file extension unless the `strip_ext` argument is `true`.
+  return_types: String
+  scope: instance
+  tags:
+  - name:
+    tag_name: api
+    text: public
+    types:
+  - name: strip_ext
+    tag_name: param
+    text: Whether or not to remove the file extension
+    types: Boolean
+  - name:
+    tag_name: return
+    text: File name
+    types: String
+  klass: LocatableEntity
+  group: Paths
+  aliases: []
+- id: file-extension-instance-method
+  name: file_extension
+  path: Lookbook::LocatableEntity#file_extension
+  signature: file_extension
+  signature_call: file_extension
+  signature_args: ''
+  description: Extension of the entity file.
+  return_types: String
+  scope: instance
+  tags:
+  - name:
+    tag_name: api
+    text: public
+    types:
+  - name:
+    tag_name: return
+    text: File extension
+    types: String
+  klass: LocatableEntity
+  group: Paths
+  aliases: []
+- id: directory-path-instance-method
+  name: directory_path
+  path: Lookbook::LocatableEntity#directory_path
+  signature: directory_path
+  signature_call: directory_path
+  signature_args: ''
+  description: Full directory path for the entity file.
+  return_types: Pathname
+  scope: instance
+  tags:
+  - name:
+    tag_name: api
+    text: public
+    types:
+  - name:
+    tag_name: return
+    text: Directory path
+    types: Pathname
+  klass: LocatableEntity
+  group: Paths
+  aliases:
+  - dir_path
+- id: relative-file-path-instance-method
+  name: relative_file_path
+  path: Lookbook::LocatableEntity#relative_file_path
+  signature: relative_file_path
+  signature_call: relative_file_path
+  signature_args: ''
+  description: |-
+    Relative path to the entity file.
+
+    Returned path is relative to the appropriate base directory
+    (i.e. the preview directory for previews).
+  return_types: Pathname
+  scope: instance
+  tags:
+  - name:
+    tag_name: api
+    text: public
+    types:
+  - name:
+    tag_name: return
+    text: Relative file path
+    types: Pathname
+  klass: LocatableEntity
+  group: Paths
+  aliases:
+  - rel_path
+- id: relative-directory-path-instance-method
+  name: relative_directory_path
+  path: Lookbook::LocatableEntity#relative_directory_path
+  signature: relative_directory_path
+  signature_call: relative_directory_path
+  signature_args: ''
+  description: |-
+    Relative directory path for the entity file.
+
+    Returned path is relative to the appropriate base directory
+    (i.e. the preview directory for previews).
+  return_types: Pathname
+  scope: instance
+  tags:
+  - name:
+    tag_name: api
+    text: public
+    types:
+  - name:
+    tag_name: return
+    text: Relative directory path
+    types: Pathname
+  klass: LocatableEntity
+  group: Paths
+  aliases: []
+- id: last-modified-instance-method
+  name: last_modified
+  path: Lookbook::LocatableEntity#last_modified
+  signature: last_modified
+  signature_call: last_modified
+  signature_args: ''
+  description: Time that the entity file was last modified
+  return_types: Time
+  scope: instance
+  tags:
+  - name:
+    tag_name: api
+    text: public
+    types:
+  - name:
+    tag_name: return
+    text: Time last modified
+    types: Time
+  klass: LocatableEntity
+  group: Paths
+  aliases: []
+groups:
+- Paths
+type: module
+category: entity
+tags:
+- name:
+  tag_name: api
+  text: public
+  types:
