--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
   "license": "MIT",
   "dependencies": {
     "@alpinejs/collapse": "^3.10.5",
+    "@alpinejs/csp": "https://gitpkg.now.sh/alpinejs/alpine/packages/csp?main",
     "@alpinejs/morph": "^3.10.5",
     "@alpinejs/persist": "^3.10.5",
     "@rails/actioncable": "^6.1.4",
