Disable code reloading in production by default
By default a Rails app configs have `cache_classes` as false in
develoment and true in production, and does not change
`reload_classes_only_on_change` from its default `true`.

This means that Lookbook currently actually watches for changes in
Production as well as Development, because it's not taking `cache_classes`
into account.

To quote the Rails Guides:
The Reloader only checks for file changes when `cache_classes` is false and
`reload_classes_only_on_change` is true (which is the default in the `development`
environment).

When `cache_classes` is true (in `production`, by default), the Reloader is
only a pass-through to the Executor.

--- a/docs/src/_data/config_options.yml
+++ b/docs/src/_data/config_options.yml
@@ -223,10 +223,10 @@ debugging:
 system:
   - name: reload_on_change
     types: Boolean
-    default: "config.reload_classes_only_on_change"
+    default: "!config.cache_classes && config.reload_classes_only_on_change"
     example: config.lookbook.reload_on_change = true
     description: |
-      By default Lookbook uses the value of the `reload_classes_only_on_change` Rails config option to decide if
+      By default Lookbook uses the value of the `cache_classes` and `reload_classes_only_on_change` Rails config options to decide if
       it should attempt to update the preview data after changes. If set the value of this config option will take precedence and be used instead.
 
   - name: live_updates
