--- a/package.json
+++ b/package.json
@@ -92,6 +92,12 @@
     "release-it": "^16.1.5",
     "watch": "^0.13.0"
   },
+  "prettier": {
+    "tabWidth": 2,
+    "semi": true,
+    "singleQuote": false,
+    "trailingComma": "es5"
+  },
   "lint-staged": {
     "!(docs/**/*)": [
       "prettier --write --ignore-unknown",
