Allow disabling of error handling
Per issue #528
Allow opting out of catching errors in the application controller.
Allows usage of web_console, better_errors, and other solutions.

--- a/config/app.yml
+++ b/config/app.yml
@@ -23,6 +23,7 @@ shared:
   preview_disable_action_view_annotations: true
   preview_type_default: view_component
   preview_sort_scenarios: false
+  preview_disable_error_handling: false
 
   page_collection_label: "Pages"
   page_nav_filter: false
