--- a/package.json
+++ b/package.json
@@ -14,12 +14,16 @@
   "author": "Mark Perkins",
   "license": "MIT",
   "dependencies": {
+    "@alpinejs/morph": "^3.13.5",
+    "@alpinejs/persist": "^3.13.5",
     "@shoelace-style/shoelace": "^2.13.1",
     "alpinejs": "^3.13.5"
   },
   "devDependencies": {
+    "@parcel/resolver-glob": "^2.11.0",
     "copyfiles": "^2.4.1",
     "parcel": "^2.11.0",
+    "postcss-nesting": "^12.0.2",
     "prettier": "^3.2.5"
   },
   "targets": {
